Fix an issue that notification is not posted if download is interrupted on start

If a download is interrupted on start, notification is not posted.
However, the download will show up in download home.
This CL fixes the issue by allowing interrupted downloads to post new notifications.

BUG=714798

Review-Url: https://codereview.chromium.org/2848723004
Cr-Commit-Position: refs/heads/master@{#468355}

Former-commit-id: 81fb77eba496961aec989cc4945b3cf47f78fbf7